crates/toner-tlb-macros/tests/compile-fail/bit_unpack_parse.rs
use toner_tlb_macros::BitUnpack;

#[derive(BitUnpack)]
struct Bad {
    #[tlb(cell)]
    val: bool,
}

fn main() {}
