crates/toner-tlb-macros/tests/compile-fail/bit_unpack_parse.stderr
error: `cell` cannot be used with derive(BitUnpack); BitUnpack operates on bits only — use `bits`
 --> tests/compile-fail/bit_unpack_parse.rs:5:5
  |
5 |     #[tlb(cell)]
  |     ^
